--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#0564bd" />
-    <meta name="author" content="Ahmed Zougari" />
+    <meta name="theme-color" content="#97978D" />
+    <meta name="author" content="Alex Paiva" />
     <link rel="icon" type="image/png" href="./img/favicon.png" />
     <meta
       name="keywords"
@@ -81,7 +81,7 @@
                 data-aos-delay="1000"
                 data-aos-duration="1000"
               >
-                <p>Hey! How are you? 👋. I am</p>
+                <p class="mt-4">Hey! How are you? 👋. I am</p>
                 <h1>ALEX PAIVA</h1>
                 <p><span id="headline"></span></p>
                 <div class="social-links mx-auto mx-lg-0">
